--- a/templates/base.html
+++ b/templates/base.html
@@ -10,24 +10,18 @@
 </head>
 <body>
 
-<!-- <nav>
-    <div class="nav-icon">
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Meal Planner Logo">
-    </div>
-    <div class="nav-buttons">
-        <button class="btn" onclick="navigate('/')">Home</button>
-        <button class="btn" onclick="navigate('/recipes')">Recipes</button>
-        <button class="btn" onclick="navigate('/meal-plan')">Meal Plan</button>
-        <button class="btn" onclick="navigate('/grocery-list')">Grocery List</button>
-    </div>
-</nav> -->
 <nav>
     <div class="nav-content">
         <div class="logo-container" onclick="location.href='/';" style="cursor: pointer;">
             <img src="./static/images/logo.png" alt="Joule Logo">
             <div class="logo-text">Joule</div>
         </div>
-        <div class="nav-links">
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="nav-links" id="navLinks">
             <a href="/recipes">Recipes</a>
             <a href="/meal-plan">Planner</a>
             <a href="/grocery-list">Grocery List</a>
